# exploration

./: CMakeLists.txt  README.md  algorithms.cpp  behavioral_patterns.cpp  book.tex  boost_lib.cpp  cherno.cpp  compound_patterns.cpp  concurrency.cpp  creational_patterns.cpp  database.db  doc.puml  explore_cpp.cpp  explore_duktape.cpp  gmock.cpp  json.cpp  language_features.cpp  mindmap.puml  modern_cpp.cpp  mqtt.cpp  mqtt_client.cpp  mqtt_client.h  myscript.js  solid.cpp
behavioral/Interpreter/: explore_interpreter.cpp
behavioral/chain_of_responsibility/: explore_chain_of_responsibility.cpp
behavioral/command/: explore_command.cpp
behavioral/mediator/: ChatRoom.cpp  ChatRoom.h  explore_mediator.cpp
behavioral/menento/: explore_memento.cpp
behavioral/observer/: explore_observer.cpp
behavioral/state/: explore_state.cpp
creational_patterns/builder/: Person.cpp  PersonAddressBuilder.h  PersonBuilder.cpp  PersonJobBuilder.h  explore_builder.cpp
creational_patterns/factories/: ape.h  dog.cpp  dog.h  explore_factories.cpp
creational_patterns/singleton/: explore_singleton.cpp
design_patterns/: design_patterns.tex
design_patterns/behavioral/: behavioral_patterns.tex
design_patterns/behavioral/command/: 1. command.puml  explore_command.cpp
design_patterns/behavioral/iterator/: 1. encapsulate_iteration.puml  2. iterator.puml  3. menu_list.puml  explore_iterator.cpp
design_patterns/behavioral/mediator/: Person.cpp  Person.h  explore_mediator.cpp
design_patterns/behavioral/observer/: 1. loose_coupling.puml  explore_observer.cpp
design_patterns/behavioral/state/: explore_state.cpp
design_patterns/behavioral/strategy/: 1_duck_with_hierarchie.puml  2_duck_with_interfaces.puml  3_duck_with_interfaces.puml  4_strategy_pattern.puml  explore_strategy.cpp
design_patterns/behavioral/template_method/: explore_template_method.cpp
design_patterns/behavioral/visitor/: explore_visitor.cpp  model.h  visitor.h
design_patterns/creational/: creational_patterns.tex
design_patterns/creational/builder/: 1. builder_pattern.puml  2. builder_pattern_car.puml  Person.h  PersonBuilder.h  explore_builder.cpp
design_patterns/creational/factories/: 1. program_to_interface.puml  2. simple_factory_pattern_pizza.puml  3. simple_factory_pattern.puml  4. factory_method_pattern_pizza.puml  5. factory_method_pattern_general.puml  6. abstract_factory_method_pattern_animal.puml  6. abstract_factory_method_pattern_general.puml  animalFactory.cpp  animalFactory.h  explore_factories.cpp
design_patterns/creational/prototype/: 1. prototype.puml  explore_prototype.cpp
design_patterns/creational/singleton/: 1. singleton.puml  capitals.txt  explore_singleton.cpp
design_patterns/structural/: structural_patterns.tex
design_patterns/structural/adapter/: 1.adapter_pattern.puml  (+2 more)
design_principles/: dependency_inversion_principle.puml  desing_principles.tex  interface_segregation_principle.puml  liskov_substitution_principle.puml  liskov_substitution_principle2.puml
factories/: animal.h  animalFactory.cpp  animalFactory.h  animalMock.h  ape.cpp  explore_factories.cpp
solid/: dip.cpp  isp.cpp  lsp.cpp  ocp.cpp  solid.cpp  srp.cpp
src/: duk_config.h  duktape.c
structural_patterns/bridge/: explore_bridge.cpp
structural_patterns/composite/: explore_composite.cpp
structural_patterns/decorator/: explore_decorator.cpp
structural_patterns/flywieght/: explore_flyweight.cpp
structural_patterns/proxy/: explore_null_object.cpp
templates/: animal_house.cpp  animal_house.h  explore_templates.cpp
(+10 files in other folders)
